0.1.2
Added: Configs to control vanilla gear nerfing (to disable, remove all items from the list)
Added: Blueprint package, an item that gives blueprints when used (pulls from a loot table)
Changed: Root advancement no longer gives blueprints, player spawns with a blueprint package instead (#7)

0.1.1
Added: Wool and leather grips (craft leather or a block of wool with an existing tool)
Fixed: Quick repair recipe matching when it shouldn't, causing some recipes to stop working (#3)
Fixed: Some tools being broken by other mods (axes on bonsai pots, for example)

0.1.0
Updated for Silent Lib 3.0.0
Added: Main materials now display their tier in the tooltip
Added: More advancements!
Changed: New machete textures
Changed: Blueprint outline colors, remove shift function
Changed: Hammers and excavators are faster (50% penalty instead of 75%)
Fixed: Mattocks not actually working as shovels or axes
Fixed: Broken tools still appearing broken after repair

0.0.11
Updated for Silent Lib 2.3.18
Added: Missing texture for spoon upgrade

0.0.10
Added: Blaze/end rods are now tool rods
Added: Quartz-tipped upgrade
Added: Reach distance stat ("reach_distance" in the JSON files)
Added: Spoon upgrade, allows pickaxes to work as shovels
Added: Red card upgrade, allows items to break permanently (could be useful in machines that use tools...)
Added: Root advancement gives players some blueprints
Added: More JEI example recipes (applying tip upgrades, for instance)
Added: JEI info pages for many items (more to come)
Changed: Tool/armor items now give just a few randomized samples, instead of one for each main material (less JEI lag)
Changed: Tooltips for tool heads improved, removed some redundant information
Fixed: Crafting station now works with the '+' (move items) button in JEI
Numerous tweaks and minor fixes

0.0.9
Added: Katanas
Added: Machetes
Added: Excavators (AOE shovels)
Fixed: Crafting station losing inventory when broken (#2)

0.0.8
Added: Missing textures and models